--- a/mathematik_physiker/übung4.tex
+++ b/mathematik_physiker/übung4.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[11pt]{article}
 
 %\usepackage[a4paper, total={170mm,257mm}]{geometry}
 \usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
@@ -49,7 +49,7 @@
             = \left| \frac{ \frac{5}{2} }{ 2n - 1 } \right|
             = \frac{ \frac{5}{2} }{ 2n - 1 }
         \]
-        Wir schätzen nun nach oben ab. \( 2n - 1\) ist immer größer gleich als \(n\).
+        Wir schätzen nun nach oben ab. \( 2n - 1\) ist nach Lemma 1 immer größer gleich als \(n\).
         Damit ist \( \frac{1}{ 2n -1 } \) immer kleiner gleich als \( \frac{1}{n} \)
         \[
             = \frac{ \frac{5}{2} }{ 2n - 1 } \leq \frac{ \frac{5}{2} }{ n }
