--- a/mathematik_physiker/übung5.tex
+++ b/mathematik_physiker/übung5.tex
@@ -9,68 +9,70 @@
 \usepackage{enumitem}
 \usepackage{amsmath}
 
-\date{14.11.2021}
-\title{Aufgabenblatt 4, Mathematik für Physiker 1}
+\date{22.11.2021}
+\title{Aufgabenblatt 5, Mathematik für Physiker 1}
 \author{Florian Adamczyk, Finn Wagner}
 
 \begin{document}
     \maketitle
 
     \section*{A 5.1}
-    
-    Sei \(c_n := \sqrt[n]{n} - 1\), zu zeigen:
-    \[ n = {(1+c_n)}^n \geq^! 1 + \frac{n (n-1)}{2} {c_n}^2 \]
-    Einsetzen der allgemeinen binomischen Formel
-    \[ {(1+c_n)}^n = \sum_{k=0}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \]
-    Ausklammern der ersten drei Terme
-    \[ \sum_{k=0}^{n} \binom{n}{k} 1^{n-k} {c_n}^k = \binom{n}{0} 1^n {c_n}^0 + \binom{n}{1} 1^{n-1} {c_n}^1 + \binom{n}{2} 1^{n-2} {c_n}^2 + \sum_{k=3}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \]
-    Es gilt \(n \in \mathbb{N}\) und damit \(n \geq 1\). Die n.te Wurzel von n ist größer gleich 1. Somit \(c_n \geq 0\).
-    Ein Binomialkoeffitient kann ebenfalls nicht negativ werden. Alle Terme auf der rechten Seite der Gleichung sind also positiv, als Produkt von 1 und \(c_n\).
-    Wir schätzen nun nach unten ab, indem wir Terme weglassen.
-    \[ \binom{n}{0} 1^n {c_n}^0 + \binom{n}{1} 1^{n-1} {c_n}^1 + \binom{n}{2} 1^{n-2} {c_n}^2 + \sum_{k=3}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \geq \binom{n}{0} 1^n {c_n}^0 + \binom{n}{2} 1^{n-2} {c_n}^2 \]
-    Vereinfachen:
-    \[ \binom{n}{0} 1^n {c_n}^0 + \binom{n}{2} 1^{n-2} {c_n}^2 = 1 + \frac{n!}{(n-2)! * 2!} {c_n}^2 = 1 + \frac{n (n-1)}{2} {c_n}^2 \]
-    Die Aussage ist bewiesen.
-
-    Nun ist zu zeigen, dass \(\sqrt[n]{n} \to 1\) für \(n \to \infty\)
-    Es gilt: 
-    \begin{gather*}
-        n \geq 1 + \frac{n (n-1)}{2} {c_n}^2 \ | \ -1 \ / n(n-1) \\
-        \Leftrightarrow \frac{n-1}{n(n-1)} \geq \frac{{c_n}^2}{2} \\
-        \Leftrightarrow \frac{1}{n} \geq \frac{{c_n}^2}{2}
-    \end{gather*}
-    Da \(c_n\) immer größer ist als 0, ist auch \(\frac{{c_n}^2}{2}\) immer größer als 0. Es gilt insgesamt:
-    \[ \frac{1}{n} \geq \frac{{c_n}^2}{2} \geq 0 \]
-    Mit dem Sandwichtheorem folgt:
-    \[ \lim_{n \to \infty} \frac{1}{n} \geq \lim_{n \to \infty} \frac{{c_n}^2}{2} \geq \lim_{n \to \infty} 0 \]
-    \[ 0 \geq \lim_{n \to \infty} \frac{{c_n}^2}{2} \geq 0 \]
-    Es folgt, dass der Grenzwert von \(c_n\) 0 ist. \(\sqrt[n]{n}\) konvergiert damit gegen 1.
-
-    Zu zeigen: Für \(a > 0\) gilt \(\sqrt[n]{a} \to 1\) für \(n \to \infty\) \\
-    Ab einem n groß genug, \(N \in \mathbb{N}\) \(n \geq N\) gilt: \\
-    \(a \leq n\) für alle \(n\), daraus folgt \(\sqrt[n]{a} \leq \sqrt[n]{n}\) \\
-    \begin{enumerate}[ label = \arabic*. Fall ]
-        \item a = 1 \\
-        Ist a = 1, so konvergiert \(\sqrt[n]{1}\) trivialler Weise gegen 1.
-        
-        \item \(1 < a\) \\
-        Da die n.te Wurzel einer Zahl a größer als 1 auch immer größer gleich 1 sein muss gilt:
-        \[1 \leq \sqrt[n]{a} < \sqrt[n]{n} \]
+    \begin{enumerate}[ label = (\alph*)]
+        \item Sei \(c_n := \sqrt[n]{n} - 1\), zu zeigen:
+        \[ n = {(1+c_n)}^n \geq^! 1 + \frac{n (n-1)}{2} {c_n}^2 \]
+        Es gilt \( n = {(1 + (\sqrt[n]{n}) -1)}^n \) \\
+        Einsetzen in die allgemeine binomischen Formel:
+        \[ \Leftrightarrow {(1+c_n)}^n = \sum_{k=0}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \]
+        Ausklammern der ersten drei Terme:
+        \[ \sum_{k=0}^{n} \binom{n}{k} 1^{n-k} {c_n}^k = \binom{n}{0} 1^n {c_n}^0 + \binom{n}{1} 1^{n-1} {c_n}^1 + \binom{n}{2} 1^{n-2} {c_n}^2 + \sum_{k=3}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \]
+        Es gilt \(n \in \mathbb{N}\) und damit \(n \geq 1\). Die n.te Wurzel von n ist größer gleich 1. Somit \(c_n \geq 0\).
+        Ein Binomialkoeffitient kann ebenfalls nicht negativ werden. Alle Terme auf der rechten Seite der Gleichung sind also positiv, als Produkt von 1 und \(c_n\).
+        Wir schätzen nun nach unten ab, indem wir Terme weglassen.
+        \[ \binom{n}{0} 1^n {c_n}^0 + \binom{n}{1} 1^{n-1} {c_n}^1 + \binom{n}{2} 1^{n-2} {c_n}^2 + \sum_{k=3}^{n} \binom{n}{k} 1^{n-k} {c_n}^k \geq \binom{n}{0} 1^n {c_n}^0 + \binom{n}{2} 1^{n-2} {c_n}^2 \]
+        Vereinfachen:
+        \[ \binom{n}{0} 1^n {c_n}^0 + \binom{n}{2} 1^{n-2} {c_n}^2 = 1 + \frac{n!}{(n-2)! * 2!} {c_n}^2 = 1 + \frac{n (n-1)}{2} {c_n}^2 \]
+        Die Aussage ist bewiesen. \\ \\
+        Nun ist zu zeigen, dass \(\sqrt[n]{n} \to 1\) für \(n \to \infty \) \\
+        Es gilt wie oben bewiesen: 
+        \begin{gather*}
+            n \geq 1 + \frac{n (n-1)}{2} {c_n}^2 \ | \ -1 \ | \ : n(n-1) \\
+            \Leftrightarrow \frac{(n-1)}{n(n-1)} \geq \frac{{c_n}^2}{2} \\
+            \Leftrightarrow \frac{1}{n} \geq \frac{{c_n}^2}{2}
+        \end{gather*}
+        Da \(c_n\) immer größer ist als 0, ist auch \(\frac{{c_n}^2}{2}\) immer größer als 0. Es gilt insgesamt:
+        \[ \frac{1}{n} \geq \frac{{c_n}^2}{2} \geq 0 \]
         Mit dem Sandwichtheorem folgt:
-        \[\lim_{n \to \infty} 1 \leq \sqrt[n]{a} < \lim_{n \to \infty} \sqrt[n]{n} \]
-        \[1 \leq \sqrt[n]{a} \leq 1\]
-        Die Folge \(\sqrt[n]{a}\) konvergiert gegen 1.
+        \[ \lim_{n \to \infty} \frac{1}{n} \geq \lim_{n \to \infty} \frac{{c_n}^2}{2} \geq \lim_{n \to \infty} 0 \]
+        \[ 0 \geq \lim_{n \to \infty} \frac{{c_n}^2}{2} \geq 0 \]
+        Es folgt, dass der Grenzwert von \(c_n\) 0 ist. \(\sqrt[n]{n}\) konvergiert damit gegen 1.
 
-        \item \(1 > a > 0 \) \\
-        Wie von Aufgabenblatt 4 bekannt, lässt sich eine reele Zahl a beliebig nah durch eine rationale Zahl q nähern.
-        Für alle unendlich viele, immer besser werdende Näherungen von a gilt:
-        \[q = \frac{x}{y} \Leftrightarrow \sqrt[n]{q} = \sqrt[n]{\frac{x}{y}} = \frac{\sqrt[n]{x}}{\sqrt[n]{y}}\]
-        Der Grenzwert aller Folgen \({(q_n)_n}\) ist gleich 1, als Bruch aus zwei konvergenten Folgen, die beide nicht Null werden.
-        \[\lim_{n \to \infty} \frac{\sqrt[n]{x}}{\sqrt[n]{y}} = \frac{1}{1} \]
-        Da der Grenzwert der Folge \(\sqrt[n]{a}\) für alle Näherungen von a gleich 1 ist, konvergiert die Folge gegen 1.
+        \item Zu zeigen: Für \(a > 0\) gilt \( \sqrt[n]{a} \to 1 \) für \( n \to \infty \) \\
+        Ab einem n groß genug, \(N \in \mathbb{N}\) \(n \geq N\) gilt: \\
+        \(a \leq n\) für alle \(n\), daraus folgt \(\sqrt[n]{a} \leq \sqrt[n]{n}\) \\
+        \begin{enumerate}[ label = \arabic*. Fall ]
+            \item a = 1 \\
+            Ist a = 1, so konvergiert \(\sqrt[n]{1}\) trivialler Weise gegen 1.
+            
+            \item \(1 < a\) \\
+            Da die n.te Wurzel einer Zahl a größer als 1 auch immer größer gleich 1 sein muss gilt:
+            \[1 \leq \sqrt[n]{a} < \sqrt[n]{n} \]
+            Mit dem Sandwichtheorem folgt:
+            \[\lim_{n \to \infty} 1 \leq \sqrt[n]{a} < \lim_{n \to \infty} \sqrt[n]{n} \]
+            \[1 \leq \sqrt[n]{a} \leq 1\]
+            Die Folge \(\sqrt[n]{a}\) konvergiert gegen 1.
+    
+            \item \(1 > a > 0 \) \\
+            Wie von Aufgabenblatt 4 bekannt, lässt sich eine reele Zahl \(a \in \mathbb{R}^+\) beliebig nah
+            durch eine rationale Zahl q mit \(x, y \in \mathbb{N} \) nähern.
+            Für alle unendlich viele, immer besser werdende Näherungen von a gilt:
+            \[q = \frac{x}{y} \Leftrightarrow \sqrt[n]{q} = \sqrt[n]{\frac{x}{y}} = \frac{\sqrt[n]{x}}{\sqrt[n]{y}}\]
+            Der Grenzwert aller Folgen \({(q_n)_n}\) ist gleich 1, als Bruch aus zwei konvergenten Folgen, die beide nicht Null werden.
+            \[\lim_{n \to \infty} \frac{\sqrt[n]{x}}{\sqrt[n]{y}} = \frac{1}{1} \]
+            Da der Grenzwert der Folge \(\sqrt[n]{a}\) für alle Näherungen von a gleich 1 ist, konvergiert die Folge gegen 1.
+        \end{enumerate}
+    
+        Es gilt für \(a > 0\) konvergiert \(\sqrt[n]{a} \to 1\) wenn \(n \to \infty\) \\
     \end{enumerate}
-
-    Es gilt für \(a > 0\) konvergiert \(\sqrt[n]{a} \to 1\) wenn \(n \to \infty\) \\
 
     \section*{A 5.2}
     Wir definieren die Folgen
@@ -79,40 +81,15 @@
     Es muss gelten:
     \[ \frac{ a_{n+1} }{ a_n } \geq 1 \]
     Definition einsetzen:
-    \[ \frac{ a_{n+1} }{ a_n  }  = \frac{ { \left( 1 + \frac{1}{ n+1 } \right) }^{ n+1 } }{ { \left( 1 + \frac{1}{n} \right) }^n } \]
-    FEHLT!
-    Macht man den Nenner kleiner, so 
-    Es gilt also insgesamt:
-    \[
-        \frac{ a_n }{ a_{n+1} }  \geq 1
-    \]
+    \[ \frac{ a_{n+1} }{ a_n  }  = \]
+    HIER BITTE DEN TEXT EINFÜGEN
     \( {(a_n)}_n \) ist damit monoton wachsend \\
 
     Zu zeigen: \( {(b_n)}_n \) ist monoton fallend:
     Es muss gelten:
     \[ \frac{ b_n }{ b_{n+1} } \geq 1 \]
     Definition einsetzen:
-    \[ \frac{ {\left( 1 + \frac{1}{n} \right)}^{n+1} }{ {\left( 1 + \frac{1}{n+1} \right)}^{n+2} } \]
-    Es gilt weitere Abschätzung:
-    \[ 
-        \left( \frac{1}{n+1} \right) < \left( \frac{1}{n} \right)
-        \ \Rightarrow \ \left( 1 + \frac{1}{n+1} \right) < \left( 1 + \frac{1}{n} \right)
-        \ \Rightarrow \ \left( \frac{1}{ 1 + \frac{1}{n+1} } \right) > \left( \frac{1}{ 1 + \frac{1}{n} } \right)
-    \]
-    Schätzt man damit ab gilt:
-    \[
-        \frac{ {\left( 1 + \frac{1}{n} \right)}^{n+1} }{ {\left( 1 + \frac{1}{n+1} \right)}^{n+2} } >
-        \frac{ {\left( 1 + \frac{1}{n} \right)}^{n+1} }{ {\left( 1 + \frac{1}{n} \right)}^{n+2} }
-    \]
-    Macht man den Nenner k, indem man die Potenz kleiner macht folgt:
-    \[
-        \frac{ {\left( 1 + \frac{1}{n} \right)}^{n+1} }{ {\left( 1 + \frac{1}{n} \right)}^{n+2} } >
-        \frac{ {\left( 1 + \frac{1}{n} \right)}^{n+1} }{ {\left( 1 + \frac{1}{n} \right)}^{n+1} } = 1
-    \]
-    Es gilt also insgesamt:
-    \[
-        \frac{ b_n }{ b_{n+1} } > 1
-    \]
+    HIER BITTE DEN ZWEITEN BEWEIS EINFÜGEN
     \( {(b_n)}_n \) ist damit monoton fallend \\
 
     Zu zeigen \({(b_n)}_n\) ist nach unten beschränkt:
