--- a/mathematik_physiker/übung5.tex
+++ b/mathematik_physiker/übung5.tex
@@ -161,21 +161,7 @@
         Die Vorraussetzungen für das Wurzelkriterium sind also erfüllt.
         Die Reihe \( \sum_{n=1}^{\infty} {\left( \frac{n}{n+1} \right)}^{n^2} \) konvergiert.
 
-        \item \( \sum_{n=1}^{\infty} \frac{ n^2 -3n + 1 }{ n^3 + n^2 - n} \) \\
-        Sei \(x_k\) die Folge der Reihe.
-        \[ x_k = \frac{ n^2 -3n + 1 }{ n^3 + n^2 - n} \]
-        Mit Partialbruchzerlegung folgt:
-        \[ \frac{2n - 2}{n^2 + n -1} - \frac{1}{n}\]
-        Durch umschreiben erhält man:
-        \[ \frac{2n - 2}{ {(n+\frac{1}{2})}^2 - \frac{5}{4} }  - \frac{1}{n}\]
-        Für alle \(k \geq N \in \mathbb{N}\) kann man den vorderen Term nach unten gegen 0 abschätzen:
-        \[ - \frac{1}{n} \]
-        Wir wenden nun das Minorantenkriterium an. \\
-        Sei die harmonische Reihe \( \sum_{n=1}^{\infty} y_k \) =  \( \sum_{n=1}^{\infty} \frac{1}{n} \) diese divergiert
-        Zu zeigen: für alle \( k \geq N \in \mathbb{N} \) gilt \( |x_k| \geq y_k\): \\
-        Da dies bereits oben in den Umformungen gezeigt ist, ist die harmonische Reihe
-        eine Minorante von \( \sum_{n=1}^{\infty} \frac{ n^2 -3n + 1 }{ n^3 + n^2 - n} \). \\
-        Die Reihe divergiert.
+        \item ?
 
         \item \(\sum_{n=1}^{\infty} \frac{2^n}{n^n}\)
         Sei \(q \in \mathbb{R}\), \(0 < q < 1\) \\
