--- a/mathematik_physiker/übung6.tex
+++ b/mathematik_physiker/übung6.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 
+\usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
 \usepackage{babel}[german]
 \usepackage{booktabs}
 \usepackage{mathtools}
