--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -50,7 +50,7 @@
             \item 1 Stoppuhr
         \end{itemize}
 
-        
+    TODO: SCHEMATIK EINFÜGEN PFEILLÄNGEN ÄNDERN
 
 
     \section{Quellen}
