--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -40,6 +40,9 @@
     Wo wir hier die Masse des Luftballons durch seine Dichte mal sein Volumen ersetzen \( m = \rho_K V \)
     TODO COMPLETE
 
+    TODO: Video aufgenommen ausgewertet mit Media Player Classic ausgewertet
+    TODO: Beachten Vidoe nur mit 30fps aufgenommen Fehlerrechnung
+
     \section{Versuchsaufbau}
         \subsection{Material}
         \begin{itemize}
