--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -60,5 +60,6 @@
     \url{https://de.wikipedia.org/wiki/Gesetz_von_Stokes}
     Anleitung zum Physikalischen Grundpraktikum Teil I (Mechanik und Thermodynamik) JLU Gießen II. Physikalisches Institut Version 1.3, 28.02.2022 von Jens Sören Lange
     https://texample.net/tikz/examples/bernoulli/
+    Luftballon Bild
 
 \end{document}
